@@ -7,3 +7,5 @@ http://msdn.microsoft.com/en-us/windows/bb980924.aspx
 
 When installing the platform SDK, make sure you install the x64 and 
 IA64 compilers from Developer Tools -> Visual C++ Compilers.
+If you're using VC Express you will only be able to compile from the
+command line.
